tests/error_002_no_closing_quote.test
START
alfa {
    beta = '''gurka''
    yyy = 123
}
ERROR
.../error_002_no_closing_quote.input:2:12: error: quote is not closed
    beta = '''gurka''
           ^
END
